--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -41,8 +41,95 @@ To get involved, start by reading <<SettingUp#, Section 2, “Setting up”>>.
 
 == Setting up
 
-Refer to the guide <<SettingUp#, here>>.
+This section includes the instructions to set up your development environment.
 
+=== Prerequisites
+
+Prior to setting up the project proper, make sure you have the following.
+
+. *JDK `1.8.0_60`* or later
++
+[NOTE]
+Having any Java 11 version is not enough. +
+This app will not work with earlier versions of Java 11. +
+You can get the latest Java 1 JDK at http://www.oracle.com/technetwork/java/javase/downloads[this link].
++
+
+. *IntelliJ* IDE
++
+[NOTE]
+IntelliJ by default has Gradle and JavaFx plugins installed. +
+Do not disable them. If you have disabled them, go to `File` > `Settings` > `Plugins` to re-enable them.
+
+
+=== Setting up the project in your computer
+
+To setup the project in IntelliJ, follow the steps below.
+
+. Fork this repo, and clone the fork to your computer.
+. Open IntelliJ (if you are not in the welcome screen, click `File` > `Close Project` to close the existing project dialog first).
+. Set up the correct JDK version for Gradle.
+.. Click `Configure` > `Project Defaults` > `Project Structure`.
+.. Click `New...` and find the directory of the JDK.
+. Click `Import Project`.
+. Locate the `build.gradle` file and select it. Click `OK`.
+. Click `Open as Project`.
+. Click `OK` to accept the default settings.
+. Open a console and run the command `gradlew processResources` (Mac/Linux: `./gradlew processResources`).
+It should finish with the `BUILD SUCCESSFUL` message. +
+This will generate all resources required by the application and tests.
+
+=== Verifying the setup
+
+To verify that the setup is completed successfully, you should:
+
+. Run the `seedu.system.MainApp` and try a few commands.
+. <<Testing, Run the tests>> to ensure they all pass.
+
+=== Configurations to do before writing code
+
+This subsection includes configurations that you may find necessary or useful as you work on this project.
+We recommend that you make these configuration changes and additions before you start writing code.
+
+==== Configuring the coding style
+
+This project follows https://github.com/oss-generic/process/blob/master/docs/CodingStandards.adoc[oss-generic coding standards]. IntelliJ's default style is mostly compliant with ours but it uses a different import order from ours. Follow the instructions below to rectify this.
+
+. Go to `File` > `Settings...` (Windows/Linux), or `IntelliJ IDEA` > `Preferences...` (macOS).
+. Select `Editor` > `Code Style` > `Java`.
+. Click on the `Imports` tab to set the order.
+
+* For `Class count to use import with '\*'` and `Names count to use static import with '*'`: Set to `999` to prevent IntelliJ from contracting the import statements.
+* For `Import Layout`: The order is `import static all other imports`, `import java.\*`, `import javax.*`, `import org.\*`, `import com.*`, `import all other imports`. Add a `<blank line>` between each `import`.
+
+Optionally, you can follow the <<UsingCheckstyle#, UsingCheckstyle.adoc>> document to configure Intellij to check style-compliance as you write code.
+
+==== Updating documentation to match your fork
+
+After forking the repo, links in the documentation will still point to the `se-edu/addressbook-level3` repo.
+If you plan to develop this as a separate product (i.e. instead of contributing to the
+`se-edu/addressbook-level3`) , you should replace the URL in the variable `repoURL` in `DeveloperGuide.adoc` and `UserGuide.adoc` with the URL of your fork.
+
+==== Setting up CI
+
+Set up Travis to perform Continuous Integration (CI) for your fork. See <<UsingTravis#, UsingTravis.adoc>> to learn how to set it up.
+
+After setting up Travis, you can optionally set up coverage reporting for your team fork (see <<UsingCoveralls#, UsingCoveralls.adoc>>).
+
+[NOTE]
+Coverage reporting could be useful for a team repository that hosts the final version but it is not that useful for your personal fork.
+
+Optionally, you can set up AppVeyor as a second CI (see <<UsingAppVeyor#, UsingAppVeyor.adoc>>).
+
+[NOTE]
+Having both Travis and AppVeyor ensures your App works on both Unix-based platforms and Windows-based platforms (Travis is Unix-based and AppVeyor is Windows-based).
+
+==== Getting started with coding
+
+When you are ready to start coding:
+
+1. Get some sense of the overall design by reading <<Design-Architecture>>.
+2. Take a look at <<GetStartedProgramming>>.
 
 == Design
 
@@ -62,7 +149,8 @@ quick overview of each component.
 The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
 Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
 
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
+`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and
+link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -126,7 +214,7 @@ image::LogicClassDiagram.png[]
 *API* :
 link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
 
-.  `Logic` uses the `AddressBookParser` class to parse the user command.
+.  `Logic` uses the `SystemParser` class to parse the user command.
 .  This results in a `Command` object which is executed by the `LogicManager`.
 .  The command execution can affect the `Model` (e.g. adding a person).
 .  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
@@ -499,7 +587,7 @@ Refer to the guide <<DevOps#, here>>.
 * organizes small to medium sized powerlifting competitions
 * has a need to manage a significant number athletes during the competition
 * has a need to see the ranking of the participants of each competition
-* prefer desktop applicationss over other types
+* prefer desktop applications over other types
 * can type fast
 * prefers typing over mouse input
 * is reasonably comfortable using CLI apps
@@ -547,14 +635,13 @@ score was derived
 |`*` | event organizer |find which club/country an athlete is affiliated with |
 so that I know which countries/clubs can be ranked across the various weight classess
 
-|`*` |user with many persons in the address book |sort persons by name |locate a person easily
+|`*` |user with many persons in the system |sort persons/competitions/participations by some field |locate an entity easily
 
 |=======================================================================
 
-_{More to be added}_
 
 [appendix]
-== Use Cases (To Do)
+== Use Cases
 
 (For all use cases below, the *System* is the `Powerlifting Competition Competitor` and the *Actor* is the `user`, unless specified otherwise)
 
@@ -582,8 +669,8 @@ Use case ends.
 
 *MSS*
 
-1. User requests for a new powerlifting competition to be started.
-2. User inputs the initial competition data (e.g. name, particpants) to be inputted.
+1. User requests for a new powerlifting competition to be added.
+2. User inputs the initial competition data (e.g. name, start and end dates) to be inputted.
 3. System adds the new competition to the user's competition list.
 4. System shows a success message.
 +
@@ -612,8 +699,8 @@ Use case ends.
 *MSS*
 
 1. User obtains a list of competitions by listing (<<Use case: UC1 - View my competition list, *UC1*>>)
-2. User requests for a new powerlifting competition to be deleted.
-3. System adds the new competition to the user's competition list.
+2. User requests for a powerlifting competition to be deleted.
+3. System deletes the competition from the user's competition list.
 4. System shows a success message.
 +
 Use case ends.
@@ -628,15 +715,161 @@ Use case ends.
 +
 Use case resume at step 2.
 
+[discrete]
+==== Use case: UC4 - Find competitions
+
+*MSS*
+
+1.  User performs a search with some keywords.
+2.  System lists competitions that have fields containing those keywords.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 2a. System does not find any competitions containing fields with those keywords.
++
+[none]
+** 2a1. System shows an empty list.
 
 [discrete]
-==== Use case: UC4 - Enter competition mode for a particular competition
+==== Use case: UC5 - Edit a specific competition
 
 *MSS*
 
 1. User obtains a list of competitions by listing (<<Use case: UC1 - View my competition list, *UC1*>>)
-2. User requests to enter competition mode for a particular competition.
-3. System enters competition mode for a particular competition.
+or by (<<Use case: UC4 - Find competitions, *UC4*>>)
+2. User requests certain data about a competition to be updated.
+3. System shows success message.
++
+Use case ends.
+
+*Extensions*
+
+* 2a. User gives invalid data.
++
+[none]
+** 2a1. System shows an error message.
++
+Use case resumes at step 2.
+
+[discrete]
+==== Use case: UC6 - Enter competition mode for a particular competition
+
+*MSS*
+
+1. User requests to enter competition mode for a particular competition by entering the competition name.
+2. System enters competition mode for a particular competition.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 2a. User gives an invalid name or the competition name does not exist in the system.
++
+[none]
+** 2a1. System shows an error message.
++
+Use case resume at step 2.
+
+
+[discrete]
+==== Use case: UC7 - View list of people
+
+*MSS*
+
+1.  User requests to list all people in the system.
+2.  Powerlifting Competition Coordinator shows a list of all people in the system.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 2a. The list is empty.
++
+Use case ends.
+
+[discrete]
+==== Use case: UC8 - Find people
+
+*MSS*
+
+1.  User performs a search with some keywords.
+2.  System lists people that have fields containing those keywords.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 2a. System does not find any people containing fields with those keywords.
++
+[none]
+** 2a1. System shows an empty list.
+
+[discrete]
+==== Use case: UC9 - Add a person to the system
+
+*MSS*
+
+1. User requests for a person to be added to the system.
+2. User inputs person data.
+3. System adds the new person to the system's list of people.
+4. System shows a success message.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 2a. Person data is invalid.
++
+[none]
+** 2a1. System shows an error message.
++
+Use case resume at step 2.
+
+* 2b. The person is already in the system's list of people.
++
+[none]
+** 2b1. System tells user that the person is already in the system's list of people.
++
+Use case ends.
+
+
+[discrete]
+==== Use case: UC10 - Edit a specific person
+
+*MSS*
+
+1. User obtains a list of competitions by listing (<<Use case: UC7 - View list of people, *UC7*>>)
+or by (<<Use case: UC8 - Find people, *UC8*>>)
+2. User requests certain data about the athlete to be updated.
+3. System shows success message.
++
+Use case ends.
+
+*Extensions*
+
+* 2a. User gives invalid data.
++
+[none]
+** 2a1. System shows an error message.
++
+Use case resumes at step 2.
+
+[discrete]
+==== Use case: UC11 - Delete a specific person
+
+*MSS*
+
+1. User views a list of people (<<Use case: UC7 - View list of people, *UC7*>>) or
+(<<Use case: UC8 - Find people, *UC8*>>)
+2. User requests for a person to be deleted from the list of people.
+3. System shows success message.
 +
 Use case ends.
 
@@ -652,12 +885,12 @@ Use case resume at step 2.
 
 
 [discrete]
-==== Use case: UC5 - View my athlete list
+==== Use case: UC12 - View my participation list
 
 *MSS*
 
-1.  User requests to list all athletes in the system.
-2.  Powerlifting Competition Coordinator shows a list of all athletes in the system.
+1.  User requests to list all participants.
+2.  System shows a list of all participants.
 +
 Use case ends.
 
@@ -668,213 +901,143 @@ Use case ends.
 +
 Use case ends.
 
-
 [discrete]
-==== Use case: UC6 - Search for athletes
+==== Use case: UC12 - Find participations
 
 *MSS*
 
-1.  User performs a search with some constraints (e.g. id, country, age, etc.).
-2.  System lists athletes satisfying all the constraints.
+1.  User performs a search with some keywords.
+2.  System lists participations that have with certain fields containing those keywords.
 +
 Use case ends.
 
 *Extensions*
 
 [none]
-* 2a. System does not find any athletes satisfying all the constraints.
+* 2a. System does not find any participations containing fields with those keywords.
 +
 [none]
 ** 2a1. System shows an empty list.
 
 [discrete]
-==== Use case: UC7 - View a specific athlete
+==== Use case: UC13 - Edit a specific participation (Available in v2.0)
 
 *MSS*
 
-1. User obtains a list of athletes by listing (<<Use case: UC5 - View my athlete list, *UC5*>>).
-or searching (<<Use case: UC6 - Search for athletes,*UC6*>>).
-2. User requests to view more information on a specific athlete in the list.
-3. System shows detailed information of the book.
+1. User views a list of participations (<<Use case: UC12 - View my participation list, *UC12*>>) or
+(<<Use case: UC13 - Find participations, *UC13*>>)
+2. User requests certain data about the participation to be updated.
+3. System shows success message.
 +
 Use case ends.
 
 *Extensions*
 
-[none]
-* 2a. System does not find the athlete in the list.
-+
-Use case restarts from step 1.
-
-* 2b. User gives an invalid index.
+* 2a. User gives invalid data.
 +
 [none]
-** 2b1. System shows an error message.
+** 2a1. System shows an error message.
 +
 Use case resumes at step 2.
 
-Use case ends.
-
 [discrete]
-==== Use case: UC8 - Add an athlete
+==== Use case: UC14 - Add a new participation
 
 *MSS*
 
-1. User requests for an athlete to be added.
-2. User inputs athlete data.
-3. User confirms that the addition of the athlete cannot be reversed.
-4. System adds the new athlete to the user's athlete list.
-5. System shows a success message.
+1. User requests for a new participation to be added.
+2. User inputs the initial participation data (e.g. person and competition name) to be inputted.
+3. System adds the new participation to the user's participation list.
+4. System shows a success message.
 +
 Use case ends.
 
 *Extensions*
 
 [none]
-* 2a. Athlete data is invalid.
+* 2a. Participation data is invalid (e.g. Competition or person with inputted name does not exist in system).
 +
 [none]
 ** 2a1. System shows an error message.
 +
 Use case resume at step 2.
 
-* 2b. The athlete is already in user's athlete list.
+* 2b. A participation with the same person and competition has already been used in user's participation list.
 +
 [none]
-** 2b1. System tells user that the athlete is already in his athlete list.
+** 2b1. System tells user that the participation is already in his participation list.
 +
 Use case ends.
 
-
-
 [discrete]
-==== Use case: UC9 - Edit a specific athlete
+==== Use case: UC15 - Delete a specific participation
 
 *MSS*
 
-1. User views a specific athlete (<<Use case: UC7 - View a specific athlete, *UC7*>>)
-2. User requests certain data about the athlete to be updated.
+1. User views a list of participation (<<Use case: UC12 - View my participation list, *UC12*>>) or
+(<<Use case: UC13 - Find participations, *UC13*>>)
+2. User requests for a participation to be deleted from the list of participations.
 3. System shows success message.
 +
 Use case ends.
 
 *Extensions*
 
-* 2a. User gives invalid data.
+[none]
+* 2a. User gives an invalid index.
 +
 [none]
 ** 2a1. System shows an error message.
 +
-Use case resumes at step 2.
+Use case resume at step 2.
 
 [discrete]
-==== Use case: UC10 - Delete a specific athlete
+==== Use case: UC16 - Overall ranking
 
 *MSS*
 
-1. User views a specific athlete (<<Use case: UC7 - View a specific athlete, *UC7*>>)
-2. User requests for an athlete to be deleted from the athlete list.
-3. System shows success message.
+1. User requests for people to be ranked based on the number of wins (first place finishes)
+they have across the competitions in the system.
+
+2. System shows success message.
 +
 Use case ends.
 
 === In competition mode
 
+
 [discrete]
-==== Use case: UC11 - View my participant list
-
+==== Use case: UC17 - Get a rank of a participation
 *MSS*
-
-1.  User requests to list all participants in the competition.
-2.  System shows a list of all participants in the competition.
+1.  User requests for the ranking of a participation in the competition that is currently being run in the session.
+2.  System gives ranking of the participation as well as additional performance related details.
 +
 Use case ends.
 
 *Extensions*
 
 [none]
-* 2a. The list is empty.
-+
-Use case ends.
-
-
-[discrete]
-==== Use case: UC12 - Search/rank for participants
-*MSS*
-1.  User performs a search with some constraints (e.g. id, country, age, ranking criteria etc.).
-2.  System lists participants satisfying all the constraints.
-+
-Use case ends.
-
-*Extensions*
-
+* 2a. System does not find any participations any person with the inputted name.
 [none]
-* 2a. System does not find any athletes satisfying all the constraints.
-+
-[none]
-** 2a1. System shows an empty list.
-
-[discrete]
-==== Use case: UC13 - View a specific participant
-
-*MSS*
-
-1. User obtains a list of athletes by listing (<<Use case: UC11 - View my participant list, *UC11*>>).
-or searching (<<Use case: UC12 - Search for participants, *UC12*>>).
-2. User requests to view more information on a specific athlete in the list.
-3. System shows detailed information of the book.
-+
-Use case ends.
-
-*Extensions*
-
-[none]
-* 2a. System does not find the athlete in the list.
-+
-Use case restarts from step 1.
-
-* 2b. User gives an invalid index.
-+
-[none]
-** 2b1. System shows an error message.
-+
-Use case resumes at step 2.
+** 2a1. System shows an error.
 
 Use case ends.
 
 [discrete]
-==== Use case: UC14 - Edit a specific participant
+==== Use case: UC18 - Get a list of participations based on their score by some ranking method
 
 *MSS*
 
-1. User views a specific athlete (<<Use case: UC13 - View a specific participant, *UC13*>>)
-2. User requests certain data about the athlete to be updated.
+1. User requests for participations in the current competition in-session to be ranked based on
+their score given by some ranking method.
+2. System shows the participations sorted by the ranking method with their scores.
 3. System shows success message.
 +
 Use case ends.
 
-*Extensions*
-
-* 2a. User gives invalid data.
-+
-[none]
-** 2a1. System shows an error message.
-+
-Use case resumes at step 2.
 
 [discrete]
-==== Use case: UC15 - Disqualify a specific participant
-
-*MSS*
-
-1. User views a specific participant (<<Use case: UC13 - View a specific participant, *UC13*>>)
-2. User requests for a particular athlete to be disqualified from the competition.
-3. System shows success message.
-+
-Use case ends.
-
-[discrete]
-==== Use case: UC16 - Call for next participant in lifting order
+==== Use case: UC19 - Call for next participant in lifting order
 
 *MSS*
 
@@ -892,7 +1055,7 @@ Use case ends.
 Use case ends.
 
 [discrete]
-==== Use case: UC16 - Exit competition
+==== Use case: UC20 - Exit competition
 
 *MSS*
 
@@ -901,7 +1064,7 @@ Use case ends.
 +
 Use case ends.
 
-==== Use case: UC16 - Finalize competition
+==== Use case: UC21 - Finalize competition
 
 *MSS*
 
@@ -917,8 +1080,7 @@ Use case ends.
 
 Use case ends.
 
-_{More to be added}_
-
+_{More to be added in v2.0}_
 
 
 [appendix]
@@ -938,26 +1100,6 @@ _{More to be added}_
 
 [[mainstream-os]] Mainstream OS::
 Windows, Linux, Unix, OS-X
-
-[[private-contact-detail]] Private contact detail::
-A contact detail that is not meant to be shared with others
-
-[appendix]
-== Product Survey
-
-*Product Name*
-
-Author: ...
-
-Pros:
-
-* ...
-* ...
-
-Cons:
-
-* ...
-* ...
 
 [appendix]
 == Instructions for Manual Testing (To Do)
@@ -981,8 +1123,6 @@ These instructions only provide a starting point for testers to work on; testers
 .. Re-launch the app by double-clicking the jar file. +
    Expected: The most recent window size and location is retained.
 
-_{ more test cases ... }_
-
 === Deleting a person
 
 . Deleting a person while all persons are listed
@@ -995,12 +1135,9 @@ _{ more test cases ... }_
 .. Other incorrect delete commands to try: `delete`, `delete x` (where x is larger than the list size) _{give more}_ +
    Expected: Similar to previous.
 
-_{ more test cases ... }_
-
 === Saving data
 
 . Dealing with missing/corrupted data files
 
 .. _{explain how to simulate a missing/corrupted file and the expected behavior}_
 
-_{ more test cases ... }_
