--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -185,7 +185,7 @@ This command allows you to delete either all transactions of a person or a singl
 
 * Examples
 ** Delete by ID: [blue]`delete 1` - Deletes the transaction at the index shown in the table. If the table shows a filtered
-list of transactions due to the Find Command detailed in <<findCommandHome, Section 5.1.5 To Find Transactions that Match Keywords in the Home Tab>>,
+list of transactions due to the Find command detailed in <<findCommandHome, Section 5.1.5 To Find Transactions that Match Keywords in the Home Tab>>,
 the 1st transaction in the filtered list is deleted.
 ** Delete by Person: [blue]`delete p/Alex Yeoh` - Deletes all transactions of the person in full list of transactions.
 
@@ -216,7 +216,7 @@ image::homeUG/HomeDeletePStep1cr.png[]
 //.Screenshot of a successful user input for Delete by Person Command in Home Tab
 image::homeUG/HomeDeletePStep2cr.png[]
 
-For both delete commands, if the transaction(s) deleted was part of a pending reimbursement record, it will also be removed from that
+For both Delete commands, if the transaction(s) deleted was part of a pending reimbursement record, it will also be removed from that
 reimbursement record. On the other hand, if the person entered is not part of our database as shown in the Members Tab,
 Leo will respond with a message to inform you.
 ////
@@ -238,7 +238,7 @@ include at least one.
 
 * Examples:
 ** [blue]`edit 1 p/Bernice Yu dt/23-Aug-2019` - Edits the transaction at the index shown in the table. If the table shows a filtered
-list of transactions due to the Find Command detailed in <<findCommandHome, Section 5.1.5 To Find Transactions that Match Keywords in the Home Tab>>,
+list of transactions due to the Find command detailed in <<findCommandHome, Section 5.1.5 To Find Transactions that Match Keywords in the Home Tab>>,
 the 1st transaction in the filtered list is edited.
 
 * Steps:
@@ -248,7 +248,7 @@ the 1st transaction in the filtered list is edited.
 image::homeUG/HomeEditStep1cr.png[]
 
 [NOTE]
-Similar to the Add Command, there is no restriction to the number of characters allowed for the description and
+Similar to the Add command, there is no restriction to the number of characters allowed for the description and
 category.
 
 [start = 2]
@@ -260,7 +260,7 @@ Leo will respond with a success message and the updated transaction will be show
 image::homeUG/HomeEditStep2cr.png[]
 
 
-If the person entered into the command is not found in the Members tab, Leo will respond to inform you which is similar to <<NoSuchPerson, Add Command>>.
+If the person entered into the command is not found in the Members tab, Leo will respond to inform you which is similar to <<NoSuchPerson, Add command>>.
 
 ==== To Sort Transactions in the Home Tab
 This command enables you to sort the table of transactions into a specified order for viewing and carrying out of subsequent commands.
@@ -273,13 +273,13 @@ This command enables you to sort the table of transactions into a specified orde
 
 * Examples:
 ** [blue]`find Alex` +
-[blue]`sort date` - Sorts both the results of the [blue]`find` command shown and the actual transaction list. The Find Command is detailed
+[blue]`sort date` - Sorts both the results of the [blue]`find` command shown and the actual transaction list. The Find command is detailed
 in <<findCommandHome, Section 5.1.5. To Find Transactions that Match Keywords in the Home Tab>>. To view the full sorted list,
 enter [blue]`back` command which is detailed in <<homeBackCommand, Section 5.1.6. To Go Back to Display the Full List in the Home Tab>>
 
 
 [NOTE]
-The undo sort command allows you to view the table of transactions in the order originally shown when the application was initially opened.
+The Undo Sort command allows you to view the table of transactions in the order originally shown when the application was initially opened.
 
 * Steps
 1. Type any one of the above commands in blue font into the command box.
@@ -292,7 +292,7 @@ This command transactions matching the specified keywords for viewing and for ca
 based on the filtered table of transactions shown. The subsequent commands will include: delete, edit and sort.
 
 [NOTE]
-An add command after a find command will cause the table to show all transactions. A find command will always
+An Add command after a Find command will cause the table to show all transactions. A Find command will always
 find from the full list transactions and show the results.
 
 * Command:
@@ -341,12 +341,12 @@ image::homeUG/HomeFindStep3cr.png[]
 
 The table will continue to show the filtered table with the transaction edited according to the command, shown in the screenshot above.
 [NOTE]
-If an Add Command is entered, the table will automatically reverse back to the previous view to show the full list of all transactions.
+As mentioned, if an Add command is entered, the table will automatically reverse back to the previous view to show the full list of all transactions.
 All other commands require you to input [blue]`back` to return to the full list of all transactions.
 
 The screenshot below shows the table after entering [blue]`back` which shows all the transactions in the table again:
 
-.Screenshot of the user input for Back Command after entering Find Command in Home Tab
+//.Screenshot of the user input for Back command after entering Find command in Home Tab
 image::homeUG/HomeFindStep3Back.png[width="700"]
 
 [[homeBackCommand]]
@@ -355,7 +355,7 @@ This command helps you to display the full transaction list after Find Commands.
 before entering the Back Command to display the full list.
 
 [NOTE]
-There is no need for you to enter a Back Command after an Add Command since the Add Command automatically resets the
+There is no need for you to enter a Back command after an Add Command since the Add command automatically resets the
 table to show the full list of transactions.
 
 * Command: [blue]`back`
@@ -366,8 +366,8 @@ table to show the full list of transactions.
 
 === Members Tab
 
-==== Add a Person
-This command allows you to add a person to the database.
+==== To Add a Person
+The Add command allows you to add a person or member to the database.
 
 * Command:
 `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...`
@@ -380,14 +380,14 @@ A person can have any number of tags (including 0).
 ** [blue]`add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01`
 ** [blue]`add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 t/criminal`
 
-==== List all Persons
-This command shows you a list of all persons in the database.
+==== To List all Persons
+The List command shows you a list of all persons in the database.
 
 * Command:
 [blue]`list`
 
-==== Edit a Person
-This command enables you to edit an existing person in the database at a specified index.
+==== To Edit a Person
+The Edit command enables you to edit an existing person in the database at a specified index.
 
 * Command:
 `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
@@ -405,8 +405,8 @@ This command enables you to edit an existing person in the database at a specifi
 ** [blue]`edit 1 p/91234567 e/johndoe@example.com` - Edits the phone number and email address of the 1st person to be `91234567` and `johndoe@example.com` respectively.
 ** [blue]`edit 2 n/Betsy Crower t/` - Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
 
-==== Locating Persons by Name
-This command enables you to find every person whose name contain any of the inputted keywords.
+==== To Locate Persons by Name
+The Find command enables you to find every person whose name contain any of the inputted keywords.
 
 * Command:
 `find KEYWORD [MORE_KEYWORDS]`
@@ -425,8 +425,8 @@ This command enables you to find every person whose name contain any of the inpu
 ** [blue]`find Betsy Tim John` - Returns any person having names `Betsy`, `Tim`, or `John`
 
 // tag::delete[]
-==== Deleting a Person
-This command enables you to delete the specified person from the database.
+==== To Delete a Person
+The Delete command enables you to delete the specified person from the database.
 
 * Command:
 `delete INDEX`
