--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -47,7 +47,7 @@ With FlashCard Pro's *Java and JavaScript cards*, teachers can define basic codi
 == Quick Start
 
 .  Ensure you have Java `11` or above installed in your Computer.
-.  Download the latest `flashcardpro.jar` link:{repoURL}/releases[here].
+.  Download the latest `FlashCardPro.jar` link:{repoURL}/releases[here].
 .  Copy the file to the folder you want to use as the home folder for your Address Book.
 .  Double-click the file to start the app. The GUI should appear in a few seconds.
 +
@@ -86,7 +86,7 @@ Examples:
 
 * `help` +
 
-Displays the commands available for use in FlashCard Pro.
+Displays the User Guide for reference in FlashCard Pro.
 
 * `help command/view` +
 
